--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -187,6 +187,10 @@ jobs:
           CIRCLE_CI_BASE_URL=http://localhost:3001/circleci
           CIRCLE_CI_PROJECT_PATH="jayc13/my-dashboard"
           CIRCLE_CI_TOKEN="your-circle-ci-token"
+          
+          # Cypress Configuration
+          CYPRESS_BASE_URL=http://localhost:3001/cypress
+          CYPRESS_API_KEY=your-cypress-api-key
 
           # Redis Configuration
           REDIS_URL=redis://localhost:6379
@@ -230,8 +234,8 @@ jobs:
 
           EOF
 
-          # Run the integration tests
-          npm test
+          # Run the integration tests with fail-fast (bail on first failure)
+          npm test -- --bail
 
       - name: Upload test results
         if: failure()
