--- a/server/.env.example
+++ b/server/.env.example
@@ -26,8 +26,11 @@ E2E_PIPELINE_URL=circle-ci-pipeline-url
 GITHUB_TOKEN=your-github-token
 GITHUB_URL=https://api.github.com
 
-# Other existing environment variables
+# Cypress Configuration
+CYPRESS_BASE_URL=https://cloud.cypress.io/enterprise-reporting/report
 CYPRESS_API_KEY=your-cypress-api-key
+
+# Jira Configuration
 JIRA_BASE_URL=your-jira-base-url
 JIRA_API_TOKEN=your-jira-api-token
 JIRA_EMAIL=your-jira-email
