--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -79,7 +79,7 @@ jobs:
   validate-tests-integration:
     name: Tests Integration
     needs: [basic-validation, validate-packages-types, validate-packages-sdk]
-    if: (!cancelled()) && always() && (needs.basic-validation.outputs.packages-types-changed == 'true' ||needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true')
+    if: (!cancelled()) && always() && (needs.basic-validation.outputs.packages-types-changed == 'true' || needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true')
     uses: ./.github/workflows/validate-tests-integration.yml
 
   # Job 10: Tests E2E validation
@@ -102,7 +102,7 @@ jobs:
   integration-testing:
     name: Integration Testing
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-server, validate-mock-server ]
-    if: (!cancelled()) && always() && (needs.basic-validation.outputs.packages-types-changed == 'true' ||needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success' && (needs.validate-mock-server.result == 'success' || needs.validate-mock-server.result == 'skipped')
+    if: (!cancelled()) && always() && (needs.basic-validation.outputs.packages-types-changed == 'true' || needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped') && (needs.validate-mock-server.result == 'success' || needs.validate-mock-server.result == 'skipped')
     uses: ./.github/workflows/run-integration-tests.yml
     secrets:
       API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
@@ -255,6 +255,10 @@ jobs:
           CIRCLE_CI_BASE_URL=http://localhost:3001/circleci
           CIRCLE_CI_PROJECT_PATH="jayc13/my-dashboard"
           CIRCLE_CI_TOKEN="your-circle-ci-token"
+          
+          # Cypress Configuration
+          CYPRESS_BASE_URL=http://localhost:3001/cypress
+          CYPRESS_API_KEY=your-cypress-api-key
 
           # Redis Configuration
           REDIS_URL=redis://redis:6379
