--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,8 @@
     "ioredis": "^5.8.0",
     "luxon": "^3.7.2",
     "mysql2": "^3.14.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -44,6 +45,7 @@
     "@types/node": "^24.5.2",
     "@types/luxon": "^3.7.1",
     "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.36.0",
