feat: Add LOG_LEVEL configuration for debugging in environment files

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -262,6 +262,8 @@ jobs:
 
           # Redis Configuration
           REDIS_URL=redis://redis:6379
+          
+          LOG_LEVEL=debug
           EOF
 
           # Start server in background
