--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,8 @@ MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=your-mysql-password
 MYSQL_DATABASE=cypress_dashboard
+# MySQL Connection Pool Configuration (optional)
+MYSQL_CONNECTION_LIMIT=10
 
 # API Configuration
 API_SECURITY_KEY=your-api-security-key
