--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "helmet": "^7.1.0",
+    "luxon": "^3.4.4",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/luxon": "^3.4.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
