ci: Add build step for type definitions in mock server validation

--- a/.github/workflows/validate-mock-server.yml
+++ b/.github/workflows/validate-mock-server.yml
@@ -32,6 +32,11 @@ jobs:
           working-directory: ${{ github.workspace }}
           project: "mock-server"
 
+      - name: Build dependencies
+        run: |
+          pnpm --filter=@my-dashboard/types run build
+        working-directory: ${{ github.workspace }}
+
       - name: Type check
         run: pnpm --filter=mock-server run typecheck
 
