--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -9,7 +9,7 @@
     "dev": "ts-node src/index.ts",
     "watch": "nodemon --exec ts-node src/index.ts",
     "clean": "rm -rf dist",
-    "test": "jest",
+    "test": "echo \"No tests configured\"",
     "lint": "eslint src --ext .ts",
     "lint-fix": "eslint src --ext .ts --fix",
     "typecheck": "tsc --noEmit"
