--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,7 +11,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-esm-fix --target=dist",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
     "lint": "eslint .",
@@ -26,13 +26,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "typescript-eslint": "^8.45.0",
     "@types/node": "^24.6.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
-    "typescript": "^5.9.2"
+    "tsc-esm-fix": "^3.1.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.45.0"
   },
   "exports": {
     ".": {
