--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,7 +11,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-esm-fix --target=dist",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
     "lint": "eslint .",
@@ -32,13 +32,15 @@
     "@typescript-eslint/parser": "^8.44.1",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
-    "typescript": "^5.9.2"
+    "tsc-esm-fix": "^3.1.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.45.0"
   },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.js"
     }
   },
   "engines": {
