chore: add pnpm-lock.yaml to watch patterns for build scripts

--- a/cron/railway.toml
+++ b/cron/railway.toml
@@ -1,6 +1,6 @@
 [build]
 buildCommand = "./scripts/deployment/railway-cron-build.sh"
-watchPatterns = ["cron/**"]
+watchPatterns = ["cron/**","pnpm-lock.yaml"]
 
 [source]
 repo = "jayc13/my-dashboard"
