refactor: Client bundle optimization (#198)

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -215,6 +215,7 @@ jobs:
             cat mock-server.log
             exit 1
           fi
+          echo "=== Mock Server Health Check ==="
           echo "✅ Mock server health check passed. Status: $HEALTH_STATUS"
 
       - name: Start server in background
@@ -283,6 +284,7 @@ jobs:
             cat server.log
             exit 1
           fi
+          echo "=== Server Health Check ==="
           echo "✅ Server health check passed. Status: $HEALTH_STATUS"
 
       - name: Start client
@@ -353,10 +355,10 @@ jobs:
           if [ -f ./client/client.pid ]; then
             kill $(cat ./client/client.pid) || true
           fi
-          # Kill any remaining processes on the ports
-          sudo lsof -ti:3001 | xargs -r sudo kill -9 || true
-          sudo lsof -ti:${{ secrets.SERVER_PORT || '3000' }} | xargs -r sudo kill -9 || true
-          sudo lsof -ti:${{ secrets.CLIENT_PORT || '4173' }} | xargs -r sudo kill -9 || true
+          # Kill any remaining processes on the ports using fuser (available in GitHub Actions)
+          fuser -k 3001/tcp || true
+          fuser -k ${{ secrets.SERVER_PORT || '3000' }}/tcp || true
+          fuser -k ${{ secrets.CLIENT_PORT || '4173' }}/tcp || true
 
   # Job 14: Final validation and summary
   validation-summary:
