chore: Add coverage script to package.json for improved test reporting

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "typecheck": "tsc --noEmit"
   },
   "engines": {
