--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,5 +12,9 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": [
+    "node_modules",
+    "src/tests",
+    "**/*.spec.ts"
+  ]
 }
