--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,19 +16,21 @@
     "clean": "rm -rf dist",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "echo \"No tests configured\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prepublishOnly": "pnpm run clean && pnpm run build",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
-    "typescript-eslint": "^8.46.1",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.0",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vitest": "^3.2.4"
   },
   "exports": {
     ".": {
